--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
 node_modules
+.angular/cache/angular-webpack/615b34554ac026fe2a462ae26afcd6ea0eb12492/1.pack
+.angular/cache/angular-webpack/615b34554ac026fe2a462ae26afcd6ea0eb12492/2.pack
+.angular/cache/angular-webpack/615b34554ac026fe2a462ae26afcd6ea0eb12492/3.pack
+.angular/cache/angular-webpack/615b34554ac026fe2a462ae26afcd6ea0eb12492/4.pack
+.angular/cache/angular-webpack/615b34554ac026fe2a462ae26afcd6ea0eb12492/5.pack
+.angular/cache/angular-webpack/615b34554ac026fe2a462ae26afcd6ea0eb12492/6.pack
+.angular/cache/angular-webpack/615b34554ac026fe2a462ae26afcd6ea0eb12492/7.pack
+.angular/cache/angular-webpack/615b34554ac026fe2a462ae26afcd6ea0eb12492/8.pack
+.angular/cache/angular-webpack/615b34554ac026fe2a462ae26afcd6ea0eb12492/9.pack
+.angular/cache/angular-webpack/615b34554ac026fe2a462ae26afcd6ea0eb12492/index.pack
+.angular/cache/angular-webpack/615b34554ac026fe2a462ae26afcd6ea0eb12492/index.pack.old
+.angular/cache/angular-webpack/615b34554ac026fe2a462ae26afcd6ea0eb12492/1.pack
+.angular/cache/angular-webpack/615b34554ac026fe2a462ae26afcd6ea0eb12492/1.pack
+.angular/cache/angular-webpack/615b34554ac026fe2a462ae26afcd6ea0eb12492/2.pack
+.angular/cache/angular-webpack/615b34554ac026fe2a462ae26afcd6ea0eb12492/index.pack
+.angular/cache/angular-webpack/615b34554ac026fe2a462ae26afcd6ea0eb12492/index.pack.old
